{{$NEXT}}

    - [RT #113293] Files with cross-reference streams weren't
      correctly setting the max object number (report and
      troubleshooting by Marco Pessotto).


2.028     2016-06-08

    - [RT #113290] Fix for reading objects inside an object stream in
      a large PDF (patch by Marco Pessotto).

    - Eliminate an infinite loop when reading a corrupt dictionary.


2.027     2016-03-11

    - This release contains seven fixes for parsing PDFs.  They mostly
      affect files using cross-reference streams, which were first
      supported in the previous release.  Thanks to Marco Pessotto and
      Stuart Henderson for their help identifying and troubleshooting
      bugs.

    - Added contrib/pdf-debug.pl to help track down issues related to
      opening and parsing PDFs.


2.026     2016-02-24

    - [RT #48683] Add support for PDFs with cross-reference streams
      and object streams (patch by Don Huettl of Grant Street Group).

    - [RT #107333] Accept an empty string as a valid Name, per PDF
      spec 1.7 section 7.3.5 (patch by Mark Balitsky).

    - [RT #98551] Rename aliases 2A, 4A, 2B, and 4B to 2A0, 4A0, 2B0,
      and 4B0.  The old names will continue to work, but are now
      undocumented (patch by Phil Perry).

    - Add -mils and -color as options for barcodes.  Reset linedash so
      that barcodes are always solid lines (patch by Erelen).

    - [RT #98549] Rename meterlimit to miterlimit (patch by Phil
      Perry).

    - [RT #98534] Rename hspace to hscale (patch by Phil Perry).

    - Fixed an infinite loop when RunLengthDecode is used for output.

    - [RT #65582] Fix embedding of OpenType fonts (fix by Simon Cozens).

    - [RT #67767] Allow an empty page to be imported into a PDF using
      importPageIntoForm (reported by Antti Lankila).

    - [RT #66341] Various fixes for ASCII85Decode and LZWDecode.


2.025     2015-09-23

    - The previous release included a patch that broke compatibility